Fix package tile images not fully covering tile

--- a/app/scss/packagegrid.scss
+++ b/app/scss/packagegrid.scss
@@ -17,9 +17,9 @@
 	img {
 		position: absolute;
 		top: 0;
-		right: 0;
-		bottom: 0;
 		left: 0;
+		width: 100%;
+		height: 100%;
 		object-fit: cover;
 		padding: 0;
 		margin: 0;
